Fix rnh_walktree_from() function (patch from kern/174959). Require valid netmask to be passed since host route is always a leaf.

PR:		kern/174959
Submitted by:	Keith Sklower
MFC after:	2 weeks

Former-commit-id: 81c32fcc101eef34cbe7776f3c12ef25d4e41d74